--- a/series-formelles.tex
+++ b/series-formelles.tex
@@ -700,11 +700,10 @@ dia = (drawBinTreeWide . fmap (const (circle labR # fc black))) s
   return to the formal definition in terms of equivalence classes of
   labelled structures.
 
-  $\el (M)$ is of course a \term{groupoid} because isomorphisms
-  between $M$-structures are invertible: if $u : s \to t$, that is, if
-  $u$ is a bijection between label sets such that relabelling the
-  structure $s$ by $u$ yields $t$, then we necessarily have
-  $u^{-1} : t \to s$.
+  $\el (M)$ is a \term{groupoid} because all its morphisms are
+  invertible: if $u : s \to t$, that is, if $u$ is a bijection between
+  label sets such that relabelling the structure $s$ by $u$ yields
+  $t$, then we necessarily have $u^{-1} : t \to s$.
 \end{commentary}
 
 \begin{ex}
