link to auto-updated PDF

--- a/series-formelles.tex
+++ b/series-formelles.tex
@@ -245,6 +245,8 @@ commentary.
 
 A git repository containing the latest state of this project can be
 found at \begin{quote}\url{https://github.com/byorgey/series-formelles}.\end{quote}
+A PDF compiled from the most recent source (automatically updated
+every time I record a commit) can be downloaded from \url{http://ozark.hendrix.edu/~yorgey/pub/series-formelles.pdf}.
 
 \newpage
 
