start writing introduction

--- a/series-formelles.tex
+++ b/series-formelles.tex
@@ -253,6 +253,24 @@ every time I record a commit) can be downloaded from \url{http://ozark.hendrix.e
 \section*{Introduction}
 \label{sec:meta-intro}
 
+The informal notion of a \term{combinatorial class} or
+\term{combinatorial family} had already been around for quite a while
+before Joyal's paper.  The basic idea is of a set of ``shapes'' or
+``structures'' containing some sort of ``atoms'' or ``elements''.
+(Functional programmers should think of an algebraic data type with a
+type parameter, although this does not capture the full sense.)  As an
+example, the combinatorial class of \term{rooted binary trees}
+consists of things like \todo{picture} (To start, we will suppose that
+the ``atoms''---indicated by dots in the diagram above---are
+indistinguishable; there will be much more to say about this later.)
+
+Combinatorial classes can be combined in various algebraic ways.  For
+example, the \emph{product} of two classes consists of the set of all
+\emph{ordered pairs} of structures from the two classes; the
+\emph{sum} consists of the disjoint union of the two sets of
+structures; and so on.  If there are a finite number of structures in
+each class, such operations correspond to \todo{continue}
+
 \todoin{
 Things to include in the introduction:
 
