update build instructions

--- a/series-formelles.tex
+++ b/series-formelles.tex
@@ -1,4 +1,4 @@
-%% -*- mode: LaTeX; compile-command: "cabal --sandbox-config-file=/home/brent/writing/translation/series-formelles/cabal.sandbox.config exec -- mk" -*-
+%% -*- mode: LaTeX; compile-command: "./build.sh" -*-
 \documentclass{amsart}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
