--- a/series-formelles.tex
+++ b/series-formelles.tex
@@ -144,7 +144,7 @@
        that appeared in an Elsevier publication. Elsevier has not
        endorsed this translation.} \medskip
 
-     See \url{http://www.elsevier.com/about/open-access/open-access-policies/oa-license-policy/elsevier-user-license}.
+     See \url{https://www.elsevier.com/about/our-business/policies/open-access-licenses/elsevier-user-license}.
   } \bigskip
 
   {\small \bibentry{joyal1981theorie}} \vspace{0.5in}
