more commentary about species of endofunctions

--- a/series-formelles.bib
+++ b/series-formelles.bib
@@ -198,3 +198,10 @@
   author={Joyal, Andr{\'e}},
   pages={126-159}
 },
+
+@book{yorgey2014combinatorial,
+  title={Combinatorial species and labelled structures},
+  author={Yorgey, Brent Abraham},
+  year={2014},
+  publisher={University of Pennsylvania}
+}
